  - Fixed Defect #275 New Multipart Delimiters added: "DISK" and "PART"
  - Fixed Defect #277 Plot can be too long for AllocinePlugin. It's now trimmed to 600 chars.
  - Enhancement  #279 Add to Issu 101 : add attribute "moviedb" to <id> tag for other plugins
  - Fixed Defect #282 Add ".tbn" as supported cover art format for increased XBMC compatability
  - Fixed Defect #286 Better detection of multipart video files.
  - Enhancement  #290 Added Hebrew language recognition to file names and flag
  - Fixed Defect #291 forceXMLOverwrite does not seem to work
  - Fixed Defect #292 Jukebox clean up "-C" does not delete jukebox files
  - Enhancement(New)  Updated PosterScanner to search for the foldername.* and folder.* for coverart (for TV Series)


MovieJukebox 1.0.12 beta
-----------------------
  - Enhancement #66 Ability to recognise a movie trailer and add it to the movie html page
  - Enhancement #67 New category: Trailer
    Trailers must contain the word Trailer (case-insensitive) somewhere between brackets []
    Trailers will only be included in the new "Trailers" category, and no other genre or alpha-listing
  - Fixed defect #122 Patch for MovieNFOScanner.java for old style imdb urls
  - Enhancement #123 improved MPAA rating organization in the gfb107 skin
    Added certification.ordering property to skin.properties in both gfb107 skins
  - Enhancement #127 TV Episode numbering scheme
    There is only possibility to fix this issue by users themselves.
    Episode name formatting was moved from java and XML to skin layout.
  - Fixed defect #132 Unable to parse year of TV episode on IMDb
  - Fixed defect #134 Rating calculation not correct
  - Fixed defect #137 New TV episodes not added to season page
    Now they are added and titles are taken from movie DB site (eg imdb)
  - Enhancement #146 "Play all" - Feature: generate .jsp-playlists for multipart movies (CD1, CD2,...) and tv-series