@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<!--                                                                                   -->
+﻿<!--                                                                                   -->
 <!-- Genre elements contains the relation between some subgenres and a master genre    -->
 <!--                                                                                   -->
 <!-- Exemple of usage for internationalization (Comédie is french for Comedy)          -->
