@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <!--                                                                                   -->
 <!-- Libraries element contains all your media directories and their paths.            -->
 <!-- Both local and nmt path are specified here.                                       -->
