@@ -33,6 +33,7 @@ MovieJukebox 1.0.13 beta
   - Fixed Defect #277 Plot can be too long for AllocinePlugin. It's now trimmed to 600 chars.
   - Enhancement  #279 Add to Issu 101 : add attribute "moviedb" to <id> tag for other plugins
   - Fixed Defect #282 Add ".tbn" as supported cover art format for increased XBMC compatability
+  - Fixed Defect #284 Detect if NFO file is newer than generated XML
   - Fixed Defect #286 Better detection of multipart video files.
   - Enhancement  #290 Added Hebrew language recognition to file names and flag
   - Fixed Defect #291 forceXMLOverwrite does not seem to work
